insert_CFLAGS = -I/usr/include/mysql
insert_LDADD = -lmysqlclient
connect1_CFLAGS = -I/usr/include/mysql
connect1_LDADD = -lmysqlclient
connect2_CFLAGS = -I/usr/include/mysql
connect2_LDADD = -lmysqlclient
bin_PROGRAMS = connect1 connect2 insert
connect1_SOURCES = connect1.c
connect2_SOURCES = connect2.c
insert_SOURCES = insert.c

