
insert_CFLAGS = -I/usr/include/mysql
insert_LDADD = -lmysqlclient

update_CFLAGS = -I/usr/include/mysql
update_LDADD = -lmysqlclient

connect1_CFLAGS = -I/usr/include/mysql
connect1_LDADD = -lmysqlclient

connect2_CFLAGS = -I/usr/include/mysql
connect2_LDADD = -lmysqlclient

select1_CFLAGS = -I/usr/include/mysql
select1_LDADD = -lmysqlclient

bin_PROGRAMS = connect1 connect2 insert update select1

update_SOURCES = update.c
connect1_SOURCES = connect1.c
connect2_SOURCES = connect2.c
insert_SOURCES = insert.c
select1_SOURCES = select1.c

